--- a/Backend/.env
+++ b/Backend/.env
@@ -8,8 +8,8 @@ EMAIL_USER =  antonioishmaelug@gmail.com
 EMAIL_PASS = pgfyvwrpgwedqyyl
 EMAIL_PORT = 465
 
-SQL_USER = CLEARING-PC1\admin
-SQL_PASSWORD = 
+SQL_USER = intranet
+SQL_PASSWORD = 12345678
 SQL_SERVER = localhost
 SQL_DB = INTRANET
 SQL_PORT = 1433
